<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NetPDA</string>
    <!--string name="hello_world">Hello world!</string-->
    <string name="action_settings">Options</string>
    <string name="heading">NetPDA</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="username">Name</string>
    <string name="retype">Re-type Password</string>
    <string name="dob">Date of Birth</string>
    <string name="designation">Designation</string>
    <string name="contactnum">Contact Number</string>
    <string name="description">About Yourself</string>
    <string name="title_activity_net_pd">NetPDA</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
