
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.littleo.netpda.Signup"
    android:id="@+id/signup"
    android:background="@drawable/background1">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/retype"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:hint="@string/retype"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/dob"
        android:layout_below="@+id/retype"
        android:layout_centerHorizontal="true"
        android:hint="@string/dob"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/designation"
        android:layout_below="@+id/dob"
        android:layout_centerHorizontal="true"
        android:hint="@string/designation"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/contactnum"
        android:layout_below="@+id/designation"
        android:layout_centerHorizontal="true"
        android:hint="@string/contactnum"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@+id/contactnum"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:lines="3"
        android:hint="@string/description"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/registerbutton"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />


</RelativeLayout>
